# libbacklight

./: COPYING  Makefile.am  README  configure.ac  libbacklight.c  libbacklight.h  libbacklight.pc.in
